--- a/express/package.json
+++ b/express/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.20",
     "pg": "^8.9.0"
   }
 }
